Subclass vs Functional mentioned

--- a/Week 4/another_model.ipynb
+++ b/Week 4/another_model.ipynb
@@ -258,6 +258,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "class Transformer(Model):\n",
+    "    def __init__(self, maxlen, vocab_size, embed_dim, num_heads, feed_forward_dim, num_transformer_blocks):\n",
+    "        super().__init__()\n",
+    "        self.inputs = Input(shape=(maxlen,), dtype=tf.int32)\n",
+    "        self.embedding_layer = TokenAndPositionEmbedding(maxlen, vocab_size, embed_dim)\n",
+    "        self.embedding_dim = embed_dim\n",
+    "        self.num_transformer_blocks = num_transformer_blocks\n",
+    "        self.transformer_blocks = [TransformerBlock(embed_dim, num_heads, feed_forward_dim) for _ in range(num_transformer_blocks)]\n",
+    "        self.dense = Dense(vocab_size)\n",
+    "\n",
+    "    def call(self, inputs):\n",
+    "        x = self.embedding_layer(inputs)\n",
+    "        for i in range(self.num_transformer_blocks):\n",
+    "            x = self.transformer_blocks[i](x)\n",
+    "        output = self.dense(x)\n",
+    "        return output\n",
+    "'''Above, we have a subclass-based representation of the model, and below, a functional API-based representation\n",
+    "The functional API learns much faster and more efficiently, because apparently tensorflow has a bunch of optimizations\n",
+    "for static graphs which are known to it before observing the data (https://www.tensorflow.org/guide/function, functional APIs make use of this paradigm by default)\n",
+    "Secondly, the for loop in the call() function cannot be optimized in the Subclass API, but it is replaced by nodes in a graph in the functional API call, \n",
+    "This avoids having to shuttle between executing the fast code the people behind tensorflow have developed and a slower python for loop.\n",
+    "'''\n",
+    "\n",
     "def get_transformer_model(\n",
     "    maxlen, \n",
     "    vocab_size, \n",
@@ -274,12 +297,6 @@
     "        x = transformer_block(x)\n",
     "    outputs = Dense(vocab_size)(x)\n",
     "    model = Model(inputs=inputs, outputs=[outputs]) # This is a functional API-based representation of a tf model\n",
-    "    loss_fn = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)\n",
-    "    model.compile(\n",
-    "        \"adam\", \n",
-    "        loss=[loss_fn],\n",
-    "        metrics=[\"accuracy\"]\n",
-    "    ) \n",
     "    return model"
    ]
   },
@@ -297,7 +314,13 @@
     }
    ],
    "source": [
-    "model = get_transformer_model(block_size, input_vocab_size, feed_forward_dim, num_heads, feed_forward_dim, num_transformer_blocks)\n"
+    "model = get_transformer_model(block_size, input_vocab_size, feed_forward_dim, num_heads, feed_forward_dim, num_transformer_blocks)\n",
+    "loss_fn = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)\n",
+    "model.compile(\n",
+    "    \"adam\", \n",
+    "    loss=[loss_fn],\n",
+    "    metrics=[\"accuracy\"] \n",
+    ") \n"
    ]
   },
   {
@@ -454,7 +477,7 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "\u001b[1m   27/31366\u001b[0m \u001b[37m━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m22:21:05\u001b[0m 3s/step - dense_8_accuracy: 0.4791 - loss: 1.8311"
+      "\u001b[1m   55/31366\u001b[0m \u001b[37m━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m23:14:12\u001b[0m 3s/step - dense_8_accuracy: 0.5524 - loss: 1.5630"
      ]
     }
    ],
