--- a/Week 4/another_model.ipynb
+++ b/Week 4/another_model.ipynb
@@ -20,11 +20,9 @@
    ],
    "source": [
     "import tensorflow as tf\n",
-    "from tensorflow.keras.models import Sequential, Model\n",
-    "from tensorflow.keras.layers import Dense, Flatten, Input, Embedding, LayerNormalization, Dropout\n",
-    "import numpy as np\n",
-    "from tensorflow import keras\n",
-    "from tensorflow.keras import layers"
+    "from tensorflow.keras import layers, Sequential, Model\n",
+    "from tensorflow.keras.layers import Dense, Input, Embedding, LayerNormalization, Dropout\n",
+    "import numpy as np"
    ]
   },
   {
@@ -505,6 +503,7 @@
     "    '''\n",
     "    input_sequence = train_data[start_index:start_index + block_size]\n",
     "    generated_text = decode(input_sequence)\n",
+    "    exact_sequence = decode(input_sequence)\n",
     "    for i in range(num_generate):\n",
     "        input_eval = tf.convert_to_tensor([input_sequence], dtype=tf.int32)\n",
     "        predictions, _ = model.predict(input_eval)\n",
@@ -512,9 +511,10 @@
     "        next_token = np.random.choice(len(probabilities), p=probabilities)\n",
     "        input_sequence += [next_token]\n",
     "        input_sequence = input_sequence[1:]\n",
+    "        exact_sequence += decode([np.argmax(probabilities)])    \n",
     "        generated_text += decode([next_token])\n",
     "\n",
-    "    return generated_text\n"
+    "    return generated_text, exact_sequence\n"
    ]
   },
   {
@@ -1540,7 +1540,7 @@
     }
    ],
    "source": [
-    "generate_text(model, start_index=0, num_generate=1000)"
+    "generate_text(model, start_index=0, num_generate=1000)[0]"
    ]
   },
   {
