Small changes for improved performance and understandability

--- a/Week 4/another_model.ipynb
+++ b/Week 4/another_model.ipynb
@@ -1540,7 +1540,7 @@
     }
    ],
    "source": [
-    "generate_text(model, start_index=0, num_generate=1000)[0]"
+    "generate_text(model, start_index=0, num_generate=1000)"
    ]
   },
   {
